--- a/styles/style.css
+++ b/styles/style.css
@@ -3,42 +3,114 @@
 	margin: 0;
 	padding: 0;
 }
-li,a,button{
-	font-family: "Montserrat",sans-serif;
-	font-weight: 500;
-	font-size: 16px;
-	color: white;
-	text-decoration: none;
-}
-header{
-	display: flex;
-	justify-content: flex-end;
-	align-items: center;
-	padding: 30px 10%;
+
+body{
+	min-height: 100vh;
 }
 
-.nav_links{
-	list-style: none;
+/* slide1 start */
+
+/* .carousel-caption h1{
+	margin-bottom: 35%;
+	margin-right: 50%;
+	margin-left: -25%;
+	position: relative;
+	font-size: 60px;
+	color: #383844;
+	-webkit-text-stroke: 0.3vw #383844;
+	text-transform: uppercase;
 }
-.nav_links li{
-	display: inline-block;
-	padding: 0px 20px;
+
+h1::before{
+	content: attr(data-text);
+	position: absolute;
+	top: 1;
+	left: 63%;
+	width: 0;
+	height: 100%;
+	color: aliceblue;
+	-webkit-text-stroke: 0vw #383844;
+	border-right: 4px solid aliceblue;
+	overflow: hidden;
+	animation: animate 1s linear infinite;
 }
-.nav_links li a{
-	transition: all 0.3s ease 0s;
-}
-.nav_links li a:hover{
-	color: blue;
-}
-button{
-	margin-left: 20px;
-	padding: 9px 25px;
-	background-color: blue;
-	border: none;
-	border-radius: 50px;
+
+@keyframes animate{
+	0%,10%,100%{
+		width: 0;
+	}
+	70%,90%{
+		width: 24%;
+	}
+} */
+
+
+.carousel-caption h1{
+	color: hsl(0, 0%, 30%);
+	font-size: 60px;
+	letter-spacing: 2px;
 	cursor: pointer;
-	transition: all 0.3s ease 0s;
+	text-transform: uppercase;
+	background: linear-gradient(
+		to right,
+		hsl(0,0%,30%) 0,
+		hsl(0,0%,100%) 10%,
+		hsl(0,0%,30%) 20%
+	);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+	animation: shine 3s linear infinite;
+
 }
-button:hover{
-	background-color: black;
+
+@keyframes shine{
+	0%{
+		background-position: 10px;
+	}
+	60%{
+		background-position: 560px;
+	}
+	100%{
+		background-position: 50px;
+	}
 }
+
+/* slide1 end */
+
+/* slide2 start */
+
+.carousel-caption h5{
+	margin-bottom: 34%;
+	/* margin-right: 50%; */
+	margin-left: -4%;
+	font-size: 40px;
+	color: red;
+	-webkit-text-stroke: 2px black;
+	text-transform: uppercase;
+	animation: fadeIn 1.2s linear infinite;
+}
+
+@keyframes fadeIn{
+	0%,20%,100%{
+		opacity: 0;
+	}
+	70%,90%{
+		opacity: 1;
+	}
+}
+
+/* slide2 end */
+.carousel-caption h4{
+	margin-bottom: 45%;
+	margin-right: 25%;
+	margin-left: 5%;
+	font-size: 65px;
+	color: white;
+	text-transform: uppercase;
+	animation: forwards;
+}
+/* slide3 start */
+
+
+/* slide3 end */
+
